--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "tailwindcss": "^2.2.17",
     "web-vitals": "^1.1.2"
   },
