--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-spinners": "^0.11.0",
     "tailwindcss": "^2.2.17",
     "web-vitals": "^1.1.2"
