--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.1.3",
+    "framer-motion": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
@@ -24,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-spinners": "^0.11.0",
+    "rerousel": "^0.1.9",
     "tailwindcss": "^2.2.17",
     "web-vitals": "^1.1.2"
   },
